# python-markers

./: .gitignore  20221104164937_marker_table.tsv  20221108141309_marker_table.tsv  20221108141827_marker_table.tsv  20221108142058_marker_table.tsv  20221108142200_marker_table.tsv  20221111105800_marker_table.tsv  20221205103115_marker_table.tsv  README.md  __init__.py  example.py  marker_management.py  marker_summary.tsv  marker_table.tsv  setup.py  subject1_marker_table.tsv  tests.ipynb  tests.yml
.github/workflows/: automated-tests.yml
for-reference/: getLPT.ps1  get_com_port.py  init_and_close_serial_device.py  install_LPT_driver.py  usb_par_marker.py
package/: README.md  pyproject.toml
package/src/python_markers/: example.py  marker_management.py  run_tests.py
package/src/python_markers/examples/: example.py
package/src/python_markers/test/: test_device_coupeling.py  test_logic.py
python_markers/: marker_management.py  version_info.py
test/: __init__.py  test-marker_management.py  test_device_coupeling  test_device_coupeling.py  test_logic.py  test_marker_management.py
