[build-system]  # TODO: pyserial, pandas, prettytable
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python_markers"
version = "0.0.1.15"  # TODO: Version specification should match the one in the code
authors = [
#   { name="Elio", email="elio@email.test" },  # TODO: Author email
#   { name="Iris", email="iris@email.test"},
  { name="Jens", email="j.van.bijsterveld@fsw.leidenuniv.nl"}
]
description = "A package meant for sending markers using the various digital output devices used at the FSW."
readme = "README.md"
requires-python = ">=3.7"  # TODO: Python versions
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",  # TODO: License name: GPL-3.0?
    "Operating System :: OS Independent",  # TODO: OS: windows?
]
keywords = []
dependencies = [
    "pyserial==3.5",
    "pandas==2.0.1",
    "prettytable==3.7.0"
]

[project.optional-dependencies]
test = []

[project.urls]
"Repository" = "https://github.com/solo-fsw/python-markers"